# local-search-neo

./: .gitattributes  .gitignore  .oxfmtrc.json  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.githooks/: pre-commit
.github/workflows/: release.yml
.zed/: settings.json
addon/: Cargo.toml  README.md  index.d.ts  package-lock.json  package.json  test-everything.cjs
addon/src/: everything.rs  file_tree.rs  js_args.rs  lib.rs  text_preview.rs
public/: index.html  plugin.json
public/everything/: Everything.ini  Everything.lng  README.md
public/preload/: everything-manager.js  services.js
scripts/: benchmark-everything-addon.cjs  cleanup-dist-addon.cjs  cleanup-dist.cjs  copy-addon.cjs  copy-pdfjs-assets.cjs  prepare-dist.cjs  run-ts-tests.cjs  test-everything-addon.cjs
src/: App.vue  devMock.ts  env.d.ts  main.css  main.ts
src/Finder/: CustomCategoryDialog.vue  FinderFooter.vue  FinderPreviewPane.vue  FinderResultList.vue  FinderSidebar.vue  SettingsDrawer.vue  fileIconCache.ts  finderLogic.test.ts  finderLogic.ts  index.vue  useCustomCategories.ts  useFilePreview.ts  useFinderSearch.ts  useResultFilters.ts
src/Finder/components/: ContextMenu.vue  CustomCategoryDialog.vue  FinderFooter.vue  FinderPreviewPane.vue  FinderResultList.vue  FinderSidebar.vue  SettingsDrawer.vue
src/Finder/composables/: useContextMenu.ts  useCustomCategories.ts  useEverything.ts  useFileIcons.ts  useFilePreview.ts  useFinderCategories.ts  useFinderEnterAction.ts  useFinderFocus.ts  useFinderKeyboard.ts  useFinderQuery.ts  useFinderSearch.ts  useFinderSettings.ts  usePersistStorage.ts  useResultActions.ts  useResultFilters.ts  useSubInput.ts
src/Finder/core/: fileIconCache.ts  finderLogic.test.ts  finderLogic.ts  resultFilters.ts
src/components/: ConfirmDialog.vue  FloatingZoom.vue  useConfirmDialog.ts  useGlocalConfirmDialog.ts
(+11 files in other folders)
