[package]
name = "addon"
version = "0.1.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "1.0.0"
encoding_rs = "0.8.35"
everything-ipc = "0.1.3"
flate2 = "1.0"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  # "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_Kernel",
  # "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
] }

[dependencies.neon]
version = "1"
default-features = false
features = ["napi-6"]
